# wechat-article-summarizer

./: .editorconfig  .env.example  .gitignore  .mypy_after_ruff.txt  .pre-commit-config.yaml  .ruff_full.json  AGENTS.md  ARCHITECTURE_RENOVATION_PLAN.md  CHANGELOG.md  IMPROVEMENT_PLAN.md  LICENSE  README.md  SECURITY.md  TEST_ISSUES.txt  TEST_REPORT.md  file_version_info.txt  mkdocs.yml  pyproject.toml  requirements-dev.txt  run_gui.pyw  start_silent.vbs  启动文章助手.bat  微信文章总结器.spec
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-multiplatform.yml  build.yml  ci.yml
.warp/skills/ci-cd-setup/: SKILL.md
.warp/skills/code-card-news-generator/: SKILL.md  auto_code_generator.py  generate_code_card.py
.warp/skills/code-prompt-coach/: install.sh
.warp/skills/code-quality/: SKILL.md
.warp/skills/codex-claude-cursor-loop/: README.md  SKILL.md
.warp/skills/container-lazy-init/: SKILL.md
.warp/skills/design-prompt-generator-v2/: SKILL.md
.warp/skills/domain-boundary-enforcer/: SKILL.md
.warp/skills/mcp-hardening/: SKILL.md
.warp/skills/ruff-deep-clean/: SKILL.md
.warp/skills/vscode-httpyac-config/: README.md
.warp/skills/web-search/: SKILL.md
.warp/skills/wechat-project-3round-audit/: SKILL.md
.warp/skills/workthrough/: EXAMPLES.md  LICENSE.txt  README.md
.warp/skills/workthrough-v2/: SKILL.md
.warp/skills_backup_before_overwrite_20260328/: REMOTE_SOURCES_2026-03-25.json
.warp/skills_backup_before_overwrite_20260328/asyncio-taskgroup-migration/: SKILL.md
.warp/skills_backup_before_overwrite_20260328/bug-fixer/: SKILL.md
.warp/skills_backup_before_overwrite_20260328/gui-decomposer/: SKILL.md
.warp/skills_backup_before_overwrite_20260328/security-auditor/: SKILL.md
.warp/skills_backup_before_overwrite_20260328/ssrf-dns-rebinding-fix/: SKILL.md
.warp/skills_backup_before_overwrite_20260328/test-generator/: SKILL.md
apps/desktop/: package-lock.json
assets/icons/: README.md
benchmarks/: test_performance.py
constraints/: py314.txt
docs/: ARCHITECTURE.md  CONTRIBUTING.md  GETTING_STARTED.md  GUI_Animation_Optimization.md  GUI_REFACTORING.md  ITERATION_ROADMAP.md  MIGRATION_INDEX.md  PROJECT_STRUCTURE.md  README.md  WINDOWS_BUILD.md  你每天配置的交换机，原来有这么多种类型？.docx  这 4 个 GitHub 开源项目，最近比较火。.docx
docs/audits/: DEEP_AUDIT_IMPROVEMENTS.md  DEEP_AUDIT_ISSUES.md  SECURITY_AUDIT.md
docs/plans/: ARCHITECTURE_RENEWAL_CHECKLIST.md  CORE_SCOPE_VIEW.md  DEEP_RENEWAL_FEASIBILITY_PLAN.md  IMPROVEMENT_PLAN.md  REPO_HYGIENE_CYCLE.md
msix/: AppxManifest.xml
research/: research_round1_architecture.md  research_round2_security.md  research_round3_testing.md  round1_ideation.txt  round2_ideation.txt  round3_ideation.txt
scripts/: _generate_execution_plan_docx.py  _generate_followup_docs.py  _generate_new_stack_docs.py  _generate_nextgen_plan_docx.py  _generate_project_focused_docs.py  build_linux.py  build_macos.py  build_modern.py  build_msix.py  build_secure.py  check_domain_boundary.py  quality_gate.py
scripts/macos/: entitlements.plist  notarize.sh
scripts/maintenance/: _generate_nextgen_policy_doc.py
services/: README.md
specs/: wechat_summarizer_linux.spec  wechat_summarizer_macos.spec
src/: launcher.py  launcher.spec
src/wechat_summarizer/: __init__.py  __main__.py  bootstrap.py
tests/: __init__.py  conftest.py  test_article_workflow_service.py  test_async_executor.py  test_batch_entities.py  test_batch_infrastructure.py  test_batch_page_mode_switch.py  test_bootstrap.py  test_boundary_conditions.py  test_cli.py  test_config_runtime_support.py  test_container.py  test_dns_rebinding_integration.py  test_embedders.py  test_entities.py  test_entrypoints.py  test_event_bus.py  test_export_use_case.py  test_exporter_html.py  test_exporter_obsidian.py  test_exporter_onenote.py  test_exporter_security_hardening.py  test_graphrag.py  test_gui_app_composition.py  test_gui_navigation_events.py  test_http_client_pool.py  test_import_source_precedence.py  test_input_validation.py  test_main_window.py  test_mapreduce_summarizer.py  test_markdown_article_package_exporter.py  test_mcp.py  test_mcp_input_validator.py  test_mcp_server_composition.py  test_mcp_server_tools.py  test_mcp_server_validation.py  test_memory_cache.py  test_observability.py  test_official_account_searcher.py  test_official_account_use_cases.py  (+24 more)
tests/gui/: __init__.py  test_components.py
tests/integration/: test_full_flow.py
verification_reports/: README.md  full_verification.json  release_v2.4.1.md  release_v2.4.3.md
verification_reports/tooling/: .mypy_full.txt
(+283 files in other folders)
