[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wechat-summarizer"
version = "2.4.0"
description = "微信公众号文章总结器 - 企业级架构 (Hexagonal + DDD)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Developer", email = "dev@example.com"}
]
keywords = ["wechat", "article", "summarizer", "onenote", "markdown", "ollama", "ai", "rag", "vector-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    # 核心
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "cryptography>=41.0.0",  # 凭证加密存储 (Fernet)
    # CLI
    "click>=8.1.0",
    "rich>=13.0.0",
    # 导出
    "markdownify>=0.11.0",
    "bleach>=6.0.0",  # HTML 安全清洗
    "python-docx>=1.0.0",  # Word 文档导出
    "html2docx>=1.6.0",  # HTML 转 Word 高保真转换
    "Pillow>=10.0.0",  # 图片处理
    "py7zr>=0.20.0",  # 7z 压缩支持
    # 路径管理
    "platformdirs>=3.0.0",
]

[project.optional-dependencies]
# AI摘要器
ai = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "tiktoken>=0.5.0",
]
# Playwright渲染模式
playwright = [
    "playwright>=1.40.0",
]
# GUI（可选，从基础依赖移出以支持无GUI环境）
gui = [
    "customtkinter>=5.2.0",
    "psutil>=5.9.0",  # 系统内存检测（低内存模式）
    "pywinstyles>=1.0.0",  # Windows 11 圆角窗口和主题支持
]
# RSS 订阅支持
rss = [
    "feedparser>=6.0.0",
    "newspaper3k>=0.2.8",
]
# 摘要质量评估
evaluation = [
    "rouge-score>=0.1.2",
]
# RAG 检索增强生成
rag = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
]
# GraphRAG 知识图谱
graphrag = [
    "networkx>=3.0",
    "leidenalg>=0.10.0",
    "igraph>=0.11.0",
]
# 可观测性
observability = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "prometheus-client>=0.19.0",
]
# MCP (Model Context Protocol) 服务支持
mcp = [
    "mcp>=1.2.0",
    "starlette>=0.27.0",
    "uvicorn>=0.23.0",
]
# 全部功能
full = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "tiktoken>=0.5.0",
    "playwright>=1.40.0",
    "customtkinter>=5.2.0",
    "psutil>=5.9.0",
    "pywinstyles>=1.0.0",
    "feedparser>=6.0.0",
    "newspaper3k>=0.2.8",
    "rouge-score>=0.1.2",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "prometheus-client>=0.19.0",
    "mcp>=1.2.0",
    "starlette>=0.27.0",
    "uvicorn>=0.23.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "networkx>=3.0",
    "leidenalg>=0.10.0",
    "igraph>=0.11.0",
]
# Windows 特性支持
windows = [
    "comtypes>=1.2.0",
    "winotify>=1.1.0",
    "pywin32>=300; sys_platform == 'win32'",
]
# 构建和打包
build = [
    "pyinstaller>=6.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]
# 开发
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-benchmark>=4.0.0",
    "respx>=0.20.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
wechat-summarizer = "wechat_summarizer.presentation.cli:run_cli"

[project.gui-scripts]
wechat-summarizer-gui = "wechat_summarizer.presentation.gui:run_gui"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/wechat_summarizer"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/presentation/gui/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
fail_under = 60
